# intfinfo

./: .gitignore  README.md  pyoxidizer.bzl  pyproject.toml
.github/workflows/: build.yml
intfinfo/: main.py
